Description
This can for example manifest as:
Assertion 'CellBlock < RegistryHive->Storage[CellType].Length' failed at ../../lib/cmlib/hivecell.c line 32
or
Assertion 'KeyCell->Signature == CM_KEY_NODE_SIGNATURE' failed at ../../lib/cmlib/cminit.c line 115
Happens on testbot all the time now.
A note from reactosfanboy:
Read https://reactos.org/wiki/Registry and especially http://amnesia.gtisc.gatech.edu/~moyix/suzibandit.ltd.uk/MSc/Registry%20Structure%20-%20Main%20V4.pdf (grep for ".log" to read how Windows does registry writes in transactional way)
Attachments
Issue Links
- is blocked by
-
CORE-19763 SYSTEM hive still can be randomly corrupted, it becomes not loadable by FreeLdr anymore
-
- Untriaged
-
- is duplicated by
-
CORE-16604 Definitive FS corruption and ROS kernel panic due to Firefox crash when opening "many tabs"
-
- Resolved
-
-
CORE-10479 BSOD in 69812 version
-
- Resolved
-
-
CORE-10859 ReactOS does not remember the screen resolution
-
- Resolved
-
-
CORE-11574 BSOD on startup of ReactOS
-
- Resolved
-
-
CORE-11825 BSOD @ VMware booting
-
- Resolved
-
-
CORE-12873 Desktop fails to start after failed installation of VMWare tools
-
- Resolved
-
-
CORE-14077 Bluescreen after installing libreoffice from app manager
-
- Resolved
-
-
CORE-14531 The desktop does not load.
-
- Resolved
-
-
CORE-15420 After the system crashes, I perform a reboot and it cannot enter the system.
-
- Resolved
-
-
CORE-15750 Crash without reasons
-
- Resolved
-
-
CORE-15784 BSOD at first boot after installation
-
- Resolved
-
-
CORE-15942 Unable to use ROS in VBox 6.0.4
-
- Resolved
-
-
CORE-16487 Removing a USB flash device without prior ejecting destroys installation when a CD is inserted
-
- Resolved
-
-
CORE-16542 Crash while startup in VirtualBox
-
- Resolved
-
-
CORE-16587 Freeloader Bug in 0.4.14-dev-690-ge92ab76-x86-gcc-lin-dbg
-
- Resolved
-
-
CORE-16683 Control alt del bug + BSOD after restart
-
- Resolved
-
-
CORE-17099 ReactOS crashes on boot (VirtualBox)
-
- Resolved
-
-
CORE-17119 BSOD and system corruption after running Recuva
-
- Resolved
-
-
CORE-17152 FreeLoader 3.0 error: cannot load
-
- Resolved
-
-
CORE-17220 Freeloader error after BSOD
-
- Resolved
-
-
CORE-17335 Freeloader exception with VMWare
-
- Resolved
-
-
CORE-17365 Error in FreeLoader v3.0
-
- Resolved
-
-
CORE-17497 An Error occured in Freeloader v3.0
-
- Resolved
-
-
CORE-17563 error in freeloader ReactOS-0.4.13-release-14-g2494cfc on proxmox ve 6.3-2
-
- Resolved
-
-
CORE-17568 QEMU 6.0 on AARCH64 boot fails.
-
- Resolved
-
-
CORE-17573 An error occured in FreeLoader v3.0
-
- Resolved
-
-
CORE-17657 blue-screen booting in virtualbox after sucessfull install...
-
- Resolved
-
-
CORE-17943 ReactOS 0.4.14 crash at boot with a blue screen
-
- Resolved
-
-
CORE-18204 Freeloader Exception 03
-
- Resolved
-
-
CORE-18311 BSOD "An error occured in FreeLoader v3.0" after fresh install
-
- Resolved
-
-
CORE-18444 After I boot the Pc (this Pc with win7), then I cannot skip this error/s. After I boot the Pc. I have Reactos on FAT32 , with parition 74GB.
-
- Resolved
-
-
CORE-18451 ReactOS can't login
-
- Resolved
-
-
CORE-18834 FreeLoader crashes after first boot in normal boot mode (not debug)
-
- Resolved
-
-
CORE-18849 error in FreeLoader v3.0
-
- Resolved
-
-
CORE-19048 ReactOs installed with default options won't boot in qemu
-
- Resolved
-
-
CORE-19121 After Installing VMWare Tools (WinPreVista.iso) It BSODS After Selecting An OS
-
- Resolved
-
-
CORE-19333 Got this after installing on Virtualbox
-
- Resolved
-
-
CORE-19520 ReactOS Boot Issue
-
- Resolved
-
-
CORE-19716 FreeLoader Crash on startup
-
- Resolved
-
-
CORE-19720 ReactOS gone wrong crashing
-
- Resolved
-
-
CORE-7776 Theme is not saved due to abnormal shutdown
-
- Resolved
-
-
CORE-18896 BSOD when I press the ReactOS in the boot menu
-
- Resolved
-
-
CORE-18862 FreeLoader crashes while booting BootCD
-
- Resolved
-
-
CORE-17232 Can't enter ctrl alt del in vmware in login screen
-
- Closed
-
-
CORE-17806 FreeLoader v3.0 0x03: Exception 03: BREAKPOINT (INT 3)
-
- Closed
-
-
CORE-18095 "It" crashed when i downloaded something in vm
-
- Closed
-
-
CORE-11352 No restoration of registry after corruption.
-
- Resolved
-
- relates to
-
CORE-9195 Need to fully implement CmCheckRegistry
-
- Resolved
-
-
CORE-18303 The kernel makes no attempt to lazy flush the registry on desktop
-
- Resolved
-
-
CORE-17990 ReactOS does not boot after installing VMware Tools from VMware Workstation Pro 16.1.0
-
- Untriaged
-
-
CORE-19467 Blue screen after freeloader (nightly build)
-
- Untriaged
-
-
CORE-19207 Implement ChkReg utility for offline registry recovery
-
- Untriaged
-
-
CORE-5940 Restart at driver install brokes system
-
- Resolved
-
-
CORE-6184 Filesystem severly corrupted by abnormal shutdown
-
- Resolved
-
-
CORE-17137 Can't bypass "Press Ctrl-Alt-Delete to begin." dialog
-
- Resolved
-
-
CORE-18351 Ctrl + Alt + Del feature in domain network is not work properly.
-
- Resolved
-
-
CORE-3868 Installed applications list in add/remove software isn't correct after dirty shutdown.
-
- Closed
-