[CMLIB]  - Increase Hive dirty counter when marking cells as dirty  - Clear the counter accordingly when flushing the hive [NTOSKRNL]  - Lazy flush the registry when unlocking it  - Correctly update hive lazy flush count when actully flushing it  - Respect the force flush parameter CORE-6762 #comment Should be fixed with r61783, let's see what testbot says.

svn path=/trunk/; revision=61783